1、可配置是否启用Ef的的自动迁移 2、重写Json.net的时间转换器，时间输出格式为yyyy-MM-dd HH:mm:ss 3、移除rpc的测试代码

--- a/src/frame/Abp.EntityFramework/Abp.EntityFramework.csproj
+++ b/src/frame/Abp.EntityFramework/Abp.EntityFramework.csproj
@@ -73,6 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbpDbContext.cs" />
+    <Compile Include="Configuration\AbpEfModuleConfiguration.cs" />
+    <Compile Include="Configuration\AbpEfModuleConfigurationExtensions.cs" />
+    <Compile Include="Configuration\IAbpEfModuleConfiguration.cs" />
     <Compile Include="DbContextInitializerBase.cs" />
     <Compile Include="DbContextManager.cs" />
     <Compile Include="DbContextTypeMatcher.cs" />
