--- a/src/frame/Abp.Owin/Abp.Owin.csproj
+++ b/src/frame/Abp.Owin/Abp.Owin.csproj
@@ -34,6 +34,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Abp.Owin.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -42,6 +43,10 @@
     </Reference>
     <Reference Include="Microsoft.Owin.FileSystems, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Owin.FileSystems.3.0.1\lib\net45\Microsoft.Owin.FileSystems.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.Security.3.0.1\lib\net45\Microsoft.Owin.Security.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin.StaticFiles, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -65,9 +70,13 @@
     <Compile Include="AbpOwinExtensions.cs" />
     <Compile Include="AbpOwinModule.cs" />
     <Compile Include="AbpOwinOptions.cs" />
+    <Compile Include="Authentication\AbpCookieAuthenticationExtensions.cs" />
+    <Compile Include="Authentication\AbpCookieAuthenticationOptions.cs" />
     <Compile Include="EmbeddedResources\AbpOwinEmbeddedResourceFileInfo.cs" />
     <Compile Include="EmbeddedResources\AbpOwinEmbeddedResourceFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\DesDataProtectionProvider.cs" />
+    <Compile Include="Security\DesDataProtector.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Abp.Web.Common\Abp.Web.Common.csproj">
@@ -82,6 +91,9 @@
   <ItemGroup>
     <None Include="Abp.Owin.nuspec" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SessionStore\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
