--- a/src/frame/Abp.Owin/packages.config
+++ b/src/frame/Abp.Owin/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
