--- a/src/frame/Abp.Web.Api/Abp.Web.Api.csproj
+++ b/src/frame/Abp.Web.Api/Abp.Web.Api.csproj
@@ -34,6 +34,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Abp.Web.Api.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
@@ -91,6 +92,8 @@
     <Compile Include="WebApi\Caching\ThrottleEntry.cs" />
     <Compile Include="WebApi\Extensions\HttpMessageExtensions.cs" />
     <Compile Include="WebApi\Handlers\ThrottlingHandler.cs" />
+    <Compile Include="WebApi\ModelBinders\MvcActionValueBinder.cs" />
+    <Compile Include="WebApi\ModelBinders\MvcStyleBindingAttribute.cs" />
     <Compile Include="WebApi\Security\Signature\AbpSignatureApiFilter.cs" />
     <Compile Include="WebApi\Upload\ApiUploadHelper.cs" />
     <Compile Include="WebApi\Upload\CustomMultipartFormDataStreamProvider.cs" />
